<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_linear"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_linear" />

        <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_grid" />

        <item
            android:id="@+id/nav_staggered_grid"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_staggered_grid" />

    </group>

</menu>